SciTE gibt es auch für Linux und MacOS, TeXShop ist besser als behauptet.

--- a/Intro/c03_Installation.tex
+++ b/Intro/c03_Installation.tex
@@ -118,10 +118,14 @@ ConTeXt Dateien sind reine Textdateien, d.\,h. sie können mit jedem beliebigen 
 Neben den Klassikern \goto{Vim}[url(https://www.vim.org)] und \goto{Emacs}[url(https://https://www.gnu.org/software/emacs/)],
 die selbstverständlich eine Unterstützung für ConTeXt bieten, gibt es zwei weitere:
 
-\goto{SciTE}[url(https://www.scintilla.org)] läuft nur unter Windows, 
+\goto{SciTE}[url(https://www.scintilla.org)] läuft unter Windows und Linux.
+Für MacOS gibt es eine kommerzielle Version, 
 \goto{Textadept}[url(https://foicica.com/textadept/)] gibt es auch für andere Betriebssysteme.
 
-Programme wie \type{TeXShop}, \type{TeXworks} und \type{TeXstudio} bieten nur eine Unterstützung für LaTeX,
+\type{TeXShop} bietet keine spezielle Syntaxhervorhebung für ConTeXt, markiert aber alle Befehle.
+Es werden Definitionen zum Aufruf von ConTeXt mitgeliefert und \type{TeXShop} unterstützt auch SyncTeX, Damit kann man zwischen Quelltext und PDF hin- und herspringen.
+
+Programme wie \type{TeXworks} und \type{TeXstudio} bieten nur eine Unterstützung für LaTeX,
 sind daher weniger hilfreich.
 
 \stopsubsection
