\emph{} ergänzt, \tex funktioniert hier nicht.

--- a/Intro/c15_Textformatierungen.tex
+++ b/Intro/c15_Textformatierungen.tex
@@ -17,7 +17,7 @@ In diesem Abschnitt sollen verschiedenen Textformatierungen ausprobiert
 werden. 
 Die Befehle ändern den nachfolgenden Text.
 Sie müssen daher mit dem Text in \type{{}} eingeschlossen werden.
-Alternativ gibt es auch eine Form in der der Text als Argument übergeben wird.
+Alternativ gibt es auch eine Form in der der Text als Argument übergeben wird, diese Version ist zu bevorzugen.
 
 \definetextbackground
  [Highlight]
@@ -28,32 +28,32 @@ Alternativ gibt es auch eine Form in der der Text als Argument übergeben wird.
 \startitemize
 \setupalign[tolerant]
 \item
-  hervorgehoben: \type{{\em }} {\em hervorgehoben}. 
+  hervorgehoben: \type{{\em }} {\em hervorgehoben} oder \type{\emph{hervorgehoben}} \emph{hervorgehoben}. 
   Die Standardeinstellung für \tex{em} ist geneigt, 
   für dieses Dokument wurde in der Environmentdatei kursive ausgewählt:
   \tex{setupbodyfontenvironment[default][em=italic]} 
 \item
-  fett: \type{{\bf }} {\bf fett} oder \tex{bold{fett}} \bold{fett}.
+  fett: \type{{\bf }} {\bf fett} oder \type{\bold{fett}} \bold{fett}.
 \item
-  kursiv: \type{{\it }} {\it kursiv} oder \tex{italic{kursiv}} \italic{kursiv}.
+  kursiv: \type{{\it }} {\it kursiv} oder \type{\italic{kursiv}} \italic{kursiv}.
 \item
-  kursiv fett: \type{{\bi }} {\bi kursiv fett} oder\tex{italicbold{kursiv fett}} 
+  kursiv fett: \type{{\bi }} {\bi kursiv fett} oder \type{\italicbold{kursiv fett}} 
   (\type{bolditalic} geht auch) \italicbold{kursiv}.
 \item
-  geneigt: \type{{\sl }} {\sl geneigt} oder \tex{slanted{geneigt}} \slanted{geneigt}. 
+  geneigt: \type{{\sl }} {\sl geneigt} oder \type{\slanted{geneigt}} \slanted{geneigt}. 
 \item
-  geneigt fett: \type{{\bs }} {\bs geneigt fett} oder \tex{slantedbold{geneigt fett}} 
+  geneigt fett: \type{{\bs }} {\bs geneigt fett} oder \type{\slantedbold{geneigt fett}} 
   (\type{boldslanted} geht auch) \slantedbold{geneigt fett}. 
 \item
-  Sans-Serif: \type{{\ss }} {\ss Sans Serif} oder \tex{sans{Sans Serif}} \sans{Sans Serif}.
+  Sans-Serif: \type{{\ss }} {\ss Sans Serif} oder \type{\sans{Sans Serif}} \sans{Sans Serif}.
 \item
-  Sans-Serif Fett: \tex{sansbold{Sans Serif Fett}} \sansbold{Sans Serif Fett}.  
+  Sans-Serif Fett: \type{\sansbold{Sans Serif Fett}} \sansbold{Sans Serif Fett}.  
 \item
-  Schreibmaschine: \type{{\tt }} {\tt Schreibmaschine} oder \tex{mono{Schreibmaschine}} 
+  Schreibmaschine: \type{{\tt }} {\tt Schreibmaschine} oder \type{\mono{Schreibmaschine}} 
   \mono{Schreibmaschine}
 \item
   Schreibmaschine fett: \type{{\tt\bf }} {\tt\bf Schreibmaschine fett} oder 
-  \tex{monobold{ Schreibmaschine fett}} \monobold{Schreibmaschine fett}.
+  \type{\monobold{ Schreibmaschine fett}} \monobold{Schreibmaschine fett}.
 \item
   Kapitälchen: \type{{\sc Kapitälchen}} {\sc Kapitälchen}
 \item
@@ -88,7 +88,7 @@ Analog gibt es auch die Befehle \tex{overbar}, \tex{overbars} sowie \tex{underba
     backgroundcolor=yellow]
   \stoptyping
   
-Dann lässt sich mit \tex{Highlight{}} der Text \Highlight{auch über mehrere Wörter markieren.}
+Dann lässt sich mit \type{\Highlight{}} der Text \Highlight{auch über mehrere Wörter markieren.}
 
 \stopitemize
 
