Auch hier funktioniert \tex nicht.

--- a/Intro/c17_Textgrößen.tex
+++ b/Intro/c17_Textgrößen.tex
@@ -39,7 +39,7 @@ Als nächstes sollen verschiedene Textgrößen ausprobiert werden.
 \stopitemize
 
 Schriftgrößen gelten alle blockweise, also bitte {\em nicht} so etwas
-wie \tex{tfa{Gross und klein}} schreiben, weil
+wie \type{\tfa{Gross und klein}} schreiben, weil
 das Ergebnis so etwas ist: {\tfa Gross und klein.}
 
 \stopsection
