Antykwa Schreibfehler korrigiert.

--- a/Intro/c15_Textformatierungen.tex
+++ b/Intro/c15_Textformatierungen.tex
@@ -207,8 +207,8 @@ Anders als bei TeX-Live werden mit ConTeXt nur wenige Schriften mitgeliefert.
 Diese können einfach aufgerufen werden.
 
 \startitemize
-\item \start\setupbodyfont[antykwa-poltawskiego]Antykwa Poltawski\stop
-\item \start\setupbodyfont[antykwa]Atykwa Toruska\stop
+\item \start\setupbodyfont[antykwa-poltawskiego]Antykwa-Poltawskiego\stop
+\item \start\setupbodyfont[antykwa]Antykwa Toruńska\stop
 \item \start\setupbodyfont[dejavu]DejaVu und DejaVu Math\stop
 \item \start\setupbodyfont[gentium]Gentium-TUG\stop
 \item \start\setupbodyfont[IBMPlex]IBM Plex\stop
@@ -226,8 +226,8 @@ Diese können einfach aufgerufen werden.
 \stopitemize
 
 \starttyping
-\start\setupbodyfont[antykwa-poltawskiego]Antykwa Poltawski\stop
-\start\setupbodyfont[antykwa]Atykwa Toruska\stop
+\start\setupbodyfont[antykwa-poltawskiego]Antykwa-Poltawskiego\stop
+\start\setupbodyfont[antykwa]Antykwa Toruńska\stop
 \start\setupbodyfont[dejavu]DejaVu und DejaVu Math\stop
 \start\setupbodyfont[gentium]Gentium-TUG\stop
 \start\setupbodyfont[IBMPlex]IBM Plex\stop
