Typing: Quellcode + Ergebnis

--- a/Intro/c19_Typing.tex
+++ b/Intro/c19_Typing.tex
@@ -21,6 +21,15 @@ Für kurze Einschübe in der Zeile dient der Befehl \tex{type{}}.
 In LaTeX heißt die Umgebung \type{verbatim}.
 
 \starttyping
+\starttyping
+% Ein Kommentar 
+\startitemize
+    \item {\tiny tiny}
+\stopitemize
+\stoptyping
+\stoptyping
+
+\starttyping
 % Ein Kommentar 
 \startitemize
     \item {\tiny tiny}
